# DNA

./: CMakeLists.txt  README.md
Alignment/: alignment.c  alignment.h  alignment_main.c  main.c
Constants/: constants.h
Generator/: generator_main.c  main.c
